# obvibe

./: .gitignore  README.md  auxiliary.py  main.py  pyproject.toml
src/obvibe/: keller.py  oh_my_ontology.py  pathfolio.py  simon_simulator.py  vibing.py
