[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obvibe"
version = "0.1.0"
description = "A brief description of your project."
dependencies = [
    "pybis",
]

[tool.setuptools]
py-modules = ["vibing", "keller"]  # Declare individual modules
package-dir = { "": "src" }