[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obvibe"
version = "0.1.0"
dependencies = [
    "pybis"
]

[project.optional-dependencies]
dev = ["pytest", "black"]  # Add any dev tools you need

[tool.setuptools.packages.find]
where = ["src"]
