[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obvibe"
version = "0.1.3"
dependencies = [
    "pybis",
    "openpyxl"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
select=["ALL"]
ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
]
fix = true